Fix: Not visible imagery names + input proportion

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -3231,6 +3231,11 @@ div.full-screen > button:focus {
     flex-grow: 1;
 }
 
+.layer-list.layer-background-list label > span {
+    width: 100%;
+    white-space: normal;
+}
+
 .layer-list input.list-item-input {
     height: 2.2em;
     padding: 0px 4px;
